--- a/index.html
+++ b/index.html
@@ -299,12 +299,12 @@
 									</td>
 									<td width="15px"></td>
 									<td>
-										<h4>Liam Hannah</h4>
+										<h4>Dave Brewington</h4>
 										<small>Ring Bearer</small>
 									</td>
 								</tr>
 							</table>
-							<p>Liam is the adorable son of Elizabeth and Chuck. He has basically known Ally and John his whole life, and can’t imagine a world where he’s more than a Facetime call away from his bestie John. He’s less than thrilled to be a ring bearer in the wedding, but to be fair, he really has no idea what it means.</p>
+							<p>Dave is a Chicago-based nonprofit consultant. Dave holds a Ph.D. from Emory University in Sociology. Dave's professional and academic work centers on nonprofit/non-governmental organizations. Dave focuses on survey research, program evaluation, design, and improvement in the U.S. nonprofit sector.  Academically Dave focuses on how internationally oriented nongovernmental organizations (international NGO’s, or INGO’s) and the institutions of religion and human rights intersect in the context of globalization.</p>
 							<!-- HENRY -->
 							<table>
 								<tr>
